@@ -4503,31 +4503,29 @@ gboolean get_followstar_idle(gpointer user_data) {
 	return FALSE;
 }
 
-/* seqpsf [sequencename channel { -at=x,y | -wcs=ra,dec }] */
+/* seqpsf sequencename [channel] [{ -at=x,y | -wcs=ra,dec }] [-followstar] */
 int process_seq_psf(int nb) {
-	if (com.script && nb < 4) {
-		siril_log_message(_("Arguments are not optional when called from a script\n"));
-		return CMD_ARG_ERROR;
-	}
-	if (!com.headless && !sequence_is_loaded() && nb < 4) {
-		siril_log_message(_("Arguments are optional only if a sequence is already loaded and selection around a star made\n"));
+	// Must have at least sequence name argument
+	if (nb < 2) {
+		siril_log_message(_("Sequence name is required as first argument (use '.' for current sequence)\n"));
 		return CMD_ARG_ERROR;
 	}
 
 	sequence *seq = NULL;
-	int layer;
-	if (nb < 4) {
-		seq = &com.seq;
-		layer = select_vport(gui.cvport);
+	int layer = -1;
+	rectangle area = {0};
+	gboolean has_area = FALSE;
+	gboolean followstar_set = FALSE;
+	gboolean use_current_seq = FALSE;
 
-		if (com.selection.w > 300 || com.selection.h > 300) {
-			siril_log_message(_("Current selection is too large. To determine the PSF, please make a selection around a single star.\n"));
-			return CMD_SELECTION_ERROR;
+	// First argument is always sequence name
+	if (strcmp(word[1], ".") == 0) {
+		use_current_seq = TRUE;
+		if (!sequence_is_loaded()) {
+			siril_log_message(_("No sequence is currently loaded\n"));
+			return CMD_SEQUENCE_NOT_FOUND;
 		}
-		if (com.selection.w <= 0 || com.selection.h <= 0) {
-			siril_log_message(_("Select an area first\n"));
-			return CMD_SELECTION_ERROR;
-		}
+		seq = &com.seq;
 	} else {
 		seq = load_sequence(word[1], NULL);
 		if (!seq) {
@@ -4538,47 +4536,144 @@ int process_seq_psf(int nb) {
 			free_sequence(seq, TRUE);
 			seq = &com.seq;
 		}
+	}
 
-		fits first = { 0 };
-		if (seq_read_frame_metadata(seq, 0, &first)) {
-			free_sequence(seq, TRUE);
-			return CMD_GENERIC_ERROR;
-		}
-		seq->current = 0;
+	// Parse remaining arguments in any order
+	for (int i = 2; i < nb; i++) {
+		if (strcmp(word[i], "-followstar") == 0) {
+			followstar_set = TRUE;
+		} else if (layer == -1) {
+			// Try to parse as layer number
+			gchar *end;
+			int potential_layer = g_ascii_strtoull(word[i], &end, 10);
+			if (end != word[i] && potential_layer < seq->nb_layers) {
+				layer = potential_layer;
+			} else {
+				// Not a valid layer number, try as star position
+				if (!has_area) {
+					fits first = { 0 };
+					if (use_current_seq) {
+						// For current sequence, we may not need to read metadata
+						// if we're using current selection
+						if (com.selection.w > 0 && com.selection.h > 0) {
+							area = com.selection;
+							has_area = TRUE;
+							continue;
+						}
+					}
 
-		gchar *end;
-		layer = g_ascii_strtoull(word[2], &end, 10);
-		if (end == word[2] || layer >= seq->nb_layers) {
-			siril_log_message(_("PSF cannot be computed on channel %d for this sequence of %d channels\n"), layer, seq->nb_layers);
-			free_sequence(seq, TRUE);
-			clearfits(&first);
+					if (seq_read_frame_metadata(seq, 0, &first)) {
+						if (seq != &com.seq) free_sequence(seq, TRUE);
+						return CMD_GENERIC_ERROR;
+					}
+					seq->current = 0;
+
+					if (parse_star_position_arg(word[i], seq, &first, &area, NULL) == 0) {
+						has_area = TRUE;
+						clearfits(&first);
+					} else {
+						clearfits(&first);
+						siril_log_message(_("Invalid argument: %s\n"), word[i]);
+						if (seq != &com.seq) free_sequence(seq, TRUE);
+						return CMD_ARG_ERROR;
+					}
+				} else {
+					siril_log_message(_("Invalid argument: %s\n"), word[i]);
+					if (seq != &com.seq) free_sequence(seq, TRUE);
+					return CMD_ARG_ERROR;
+				}
+			}
+		} else if (!has_area) {
+			// Try to parse as star position
+			fits first = { 0 };
+			if (seq_read_frame_metadata(seq, 0, &first)) {
+				if (seq != &com.seq) free_sequence(seq, TRUE);
+				return CMD_GENERIC_ERROR;
+			}
+			seq->current = 0;
+
+			if (parse_star_position_arg(word[i], seq, &first, &area, NULL) == 0) {
+				has_area = TRUE;
+				clearfits(&first);
+			} else {
+				clearfits(&first);
+				siril_log_message(_("Invalid argument: %s\n"), word[i]);
+				if (seq != &com.seq) free_sequence(seq, TRUE);
+				return CMD_ARG_ERROR;
+			}
+		} else {
+			siril_log_message(_("Invalid argument: %s\n"), word[i]);
+			if (seq != &com.seq) free_sequence(seq, TRUE);
 			return CMD_ARG_ERROR;
 		}
+	}
 
-		rectangle area;
-		if (parse_star_position_arg(word[3], seq, &first, &area, NULL)) {
-			free_sequence(seq, TRUE);
-			clearfits(&first);
-			return CMD_ARG_ERROR;
+	// Set defaults for missing arguments
+	if (layer == -1) {
+		if (use_current_seq) {
+			layer = select_vport(gui.cvport);
+		} else {
+			layer = 0; // Default to first layer
+		}
+	}
+
+	if (!has_area) {
+		if (use_current_seq && com.selection.w > 0 && com.selection.h > 0) {
+			area = com.selection;
+			has_area = TRUE;
+		} else {
+			if (com.script) {
+				siril_log_message(_("Layer and star position arguments are required when called from a script\n"));
+				if (seq != &com.seq) free_sequence(seq, TRUE);
+				return CMD_ARG_ERROR;
+			}
+			if (!com.headless) {
+				siril_log_message(_("Layer and star position arguments are required, or make a selection around a star\n"));
+				if (seq != &com.seq) free_sequence(seq, TRUE);
+				return CMD_ARG_ERROR;
+			}
+		}
+	}
+
+	// Validate layer
+	if (layer >= seq->nb_layers) {
+		siril_log_message(_("PSF cannot be computed on channel %d for this sequence of %d channels\n"), layer, seq->nb_layers);
+		if (seq != &com.seq) free_sequence(seq, TRUE);
+		return CMD_ARG_ERROR;
+	}
+
+	// Validate selection area
+	if (has_area) {
+		if (area.w > 300 || area.h > 300) {
+			siril_log_message(_("Current selection is too large. To determine the PSF, please make a selection around a single star.\n"));
+			if (seq != &com.seq) free_sequence(seq, TRUE);
+			return CMD_SELECTION_ERROR;
+		}
+		if (area.w <= 0 || area.h <= 0) {
+			siril_log_message(_("Select an area first\n"));
+			if (seq != &com.seq) free_sequence(seq, TRUE);
+			return CMD_SELECTION_ERROR;
 		}
 		com.selection = area;
-		clearfits(&first);
 	}
 
-	framing_mode framing = REGISTERED_FRAME;
-	if (framing == REGISTERED_FRAME && !seq->regparam[layer])
-		framing = ORIGINAL_FRAME;
-	if (framing == ORIGINAL_FRAME) {
-		if (com.headless)
-			framing = FOLLOW_STAR_FRAME;
-		else {
-			execute_idle_and_wait_for_it(get_followstar_idle, &framing);
+	// Set framing mode
+	framing_mode framing = ORIGINAL_FRAME;
+	if (followstar_set) {
+		framing = FOLLOW_STAR_FRAME;
+	} else {
+		// Try registered frame first if available
+		if (seq->regparam[layer]) {
+			framing = REGISTERED_FRAME;
 		}
 	}
+
 	siril_log_message(_("Running the PSF on the sequence, layer %d\n"), layer);
 	int retval = seqpsf(seq, layer, FALSE, FALSE, FALSE, framing, TRUE, com.script) ? CMD_GENERIC_ERROR : CMD_OK;
+
 	if (seq != &com.seq)
 		free_sequence(seq, TRUE);
+
 	return retval;
 }
 
